# okf-in-a-box

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
doc/planning/: design-spec.md  open-questions-findings.md  technical-spec.md
src/: foo.py
tests/: test_foo.py
